[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Music/GameMusic.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Background/Stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game/GUI/GameGUI.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Game/GUI/PlayerInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/theme/gdquest.theme" type="Theme" id=6]
[ext_resource path="res://Scenes/Game/Camera.gd" type="Script" id=7]
[ext_resource path="res://Ressources/floor_tileset.tres" type="TileSet" id=8]
[ext_resource path="res://Ressources/crates_tileset.tres" type="TileSet" id=9]
[ext_resource path="res://Scenes/TextButton.gd" type="Script" id=10]
[ext_resource path="res://Scenes/MainMenu/SettingsMenu/SettingsMenu.tscn" type="PackedScene" id=11]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_strength = 1.05

[sub_resource type="Animation" id=2]
resource_name = "GameOver"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, -80.0 ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends Control

onready var lab_message = $CenterContainer/VBoxContainer/LabWinnerMessage

func show_summary(pid):
	show()
	lab_message.text = Global.player_names[int(pid)-1] + \" won!\"
	$AnimationPlayer.play(\"show\")
"

[sub_resource type="Animation" id=4]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="GDScript" id=5]
script/source = "extends HBoxContainer

func _ready():
	rect_size = Vector2(rect_size.x, 48)
"

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
pause_menu_path = NodePath("Foreground/Menu")
game_summary_path = NodePath("Foreground/GameSummary")
gui_path = NodePath("GUI")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true
bus = "Music"

[node name="GameOver" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -100

[node name="Black" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" parent="." instance=ExtResource( 3 )]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1216.0
margin_top = -16.0
margin_right = 1520.0
margin_bottom = 832.0
rect_min_size = Vector2( 294, 848 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
player_container1 = NodePath("VBoxContainer/PlayerInfo1")
player_container2 = NodePath("VBoxContainer/PlayerInfo2")
player_container3 = NodePath("VBoxContainer/PlayerInfo3")
player_container4 = NodePath("VBoxContainer/PlayerInfo4")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo1" parent="GUI/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 294.0
margin_bottom = 144.0
player_icon = NodePath("../PlayerInfo1/VBoxContainer/PlayerStatus/PlayerIcon")
lab_health = NodePath("../PlayerInfo1/VBoxContainer/PlayerStatus/VBoxContainer/HealthLabel")
lab_bombs = NodePath("../PlayerInfo1/VBoxContainer/PlayerStatus/VBoxContainer2/BombsLabel")
lab_baguettes = NodePath("../PlayerInfo1/VBoxContainer/PlayerStatus/VBoxContainer3/BaguettesLabel")
lab_speed = NodePath("../PlayerInfo1/VBoxContainer/ItemContainer/SpeedLabel")
lab_bomb_range = NodePath("../PlayerInfo1/VBoxContainer/ItemContainer/RangeLabel")
lab_explosion_strength = NodePath("../PlayerInfo1/VBoxContainer/ItemContainer/ExplosionLabel")
lab_bomb_move = NodePath("../PlayerInfo1/VBoxContainer/ItemContainer/MoveLabel")

[node name="PlayerInfo2" parent="GUI/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 224.0
margin_right = 294.0
margin_bottom = 368.0

[node name="PlayerInfo3" parent="GUI/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 448.0
margin_right = 294.0
margin_bottom = 592.0

[node name="PlayerInfo4" parent="GUI/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 672.0
margin_right = 294.0
margin_bottom = 816.0

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="Foreground"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Foreground/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Foreground/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/Menu/CenterContainer"]
margin_left = 904.0
margin_top = 460.0
margin_right = 1015.0
margin_bottom = 620.0

[node name="BtnResume" type="Button" parent="Foreground/Menu/CenterContainer/VBoxContainer"]
margin_right = 111.0
margin_bottom = 34.0
text = "Resume"
script = ExtResource( 10 )
lang_tile = "resume"

[node name="BtnSettings" type="Button" parent="Foreground/Menu/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 111.0
margin_bottom = 76.0
text = "Settings"
script = ExtResource( 10 )
lang_tile = "settings"

[node name="BtnMenu" type="Button" parent="Foreground/Menu/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 111.0
margin_bottom = 118.0
text = "Menu"
script = ExtResource( 10 )
lang_tile = "menu"

[node name="BtnQuit" type="Button" parent="Foreground/Menu/CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 111.0
margin_bottom = 160.0
text = "Quit"
script = ExtResource( 10 )
lang_tile = "quit"

[node name="GameSummary" type="Control" parent="Foreground"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="Foreground/GameSummary"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Foreground/GameSummary"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/GameSummary/CenterContainer"]
margin_left = 891.0
margin_top = 465.0
margin_right = 1029.0
margin_bottom = 615.0

[node name="LabWinnerMessage" type="Label" parent="Foreground/GameSummary/CenterContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 24.0
text = "Player X Won!"

[node name="BtnPlay" type="Button" parent="Foreground/GameSummary/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 66.0
text = "Play again"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
lang_tile = "play"

[node name="BtnMenu" type="Button" parent="Foreground/GameSummary/CenterContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 138.0
margin_bottom = 108.0
text = "Menu"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
lang_tile = "menu"

[node name="BtnQuit" type="Button" parent="Foreground/GameSummary/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 138.0
margin_bottom = 150.0
text = "Quit"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
lang_tile = "quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Foreground/GameSummary"]
anims/show = SubResource( 4 )

[node name="SettingsMenu" parent="Foreground" instance=ExtResource( 11 )]
visible = false
margin_bottom = 294.0
mouse_filter = 1

[node name="Control" type="Control" parent="Foreground/SettingsMenu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 521.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Foreground/SettingsMenu/Control"]
margin_right = 560.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
rect_clip_content = true
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Foreground/SettingsMenu/Control/HBoxContainer"]
margin_right = 507.0
margin_bottom = 48.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="BtnCloseSettings" type="Button" parent="Foreground/SettingsMenu/Control/HBoxContainer"]
margin_left = 515.0
margin_right = 560.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
pause_mode = 1
position = Vector2( 756, 408 )
current = true
script = ExtResource( 7 )
shake_amplitude = 0.05
shake_duration = 0.15

[node name="TimerShake" type="Timer" parent="Camera"]
one_shot = true

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 1216, 832 )

[node name="PlayerSpawns" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( 64, 64 )

[node name="Spawn1" type="Position2D" parent="PlayerSpawns"]
position = Vector2( 32, 32 )

[node name="Spawn2" type="Position2D" parent="PlayerSpawns"]
position = Vector2( 1056, 672 )

[node name="Spawn3" type="Position2D" parent="PlayerSpawns"]
position = Vector2( 32, 672 )

[node name="Spawn4" type="Position2D" parent="PlayerSpawns"]
position = Vector2( 1056, 32 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0, 458768, 2, 0, 458769, 2, 0, 458770, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0 )

[node name="Container" type="YSort" parent="."]
pause_mode = 1

[node name="Crates" type="TileMap" parent="Container"]
tile_set = ExtResource( 9 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 65536, 1, 0, 65538, 1, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65554, 1, 0, 131072, 1, 0, 131074, 1, 0, 131076, 1, 0, 131077, 0, 0, 131078, 1, 0, 131079, 0, 0, 131080, 1, 0, 131081, 0, 0, 131082, 1, 0, 131083, 0, 0, 131084, 1, 0, 131085, 0, 0, 131086, 1, 0, 131088, 1, 0, 131090, 1, 0, 196608, 1, 0, 196626, 1, 0, 262144, 1, 0, 262145, 0, 0, 262146, 1, 0, 262147, 0, 0, 262148, 1, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 1, 0, 262153, 0, 0, 262154, 1, 0, 262155, 0, 0, 262156, 1, 0, 262157, 0, 0, 262158, 1, 0, 262159, 0, 0, 262160, 1, 0, 262161, 0, 0, 262162, 1, 0, 327680, 1, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 1, 0, 393216, 1, 0, 393217, 0, 0, 393218, 1, 0, 393219, 0, 0, 393220, 1, 0, 393221, 0, 0, 393222, 1, 0, 393223, 0, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 0, 0, 393228, 1, 0, 393229, 0, 0, 393230, 1, 0, 393231, 0, 0, 393232, 1, 0, 393233, 0, 0, 393234, 1, 0, 458752, 1, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 1, 0, 524288, 1, 0, 524289, 0, 0, 524290, 1, 0, 524291, 0, 0, 524292, 1, 0, 524293, 0, 0, 524294, 1, 0, 524295, 0, 0, 524296, 1, 0, 524297, 0, 0, 524298, 1, 0, 524299, 0, 0, 524300, 1, 0, 524301, 0, 0, 524302, 1, 0, 524303, 0, 0, 524304, 1, 0, 524305, 0, 0, 524306, 1, 0, 589824, 1, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589842, 1, 0, 655360, 1, 0, 655362, 1, 0, 655364, 1, 0, 655365, 0, 0, 655366, 1, 0, 655367, 0, 0, 655368, 1, 0, 655369, 0, 0, 655370, 1, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 1, 0, 655376, 1, 0, 655378, 1, 0, 720896, 1, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720914, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0 )
[connection signal="pressed" from="Foreground/Menu/CenterContainer/VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="Foreground/Menu/CenterContainer/VBoxContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="Foreground/Menu/CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="Foreground/Menu/CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="Foreground/GameSummary/CenterContainer/VBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="Foreground/GameSummary/CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="Foreground/GameSummary/CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="Foreground/SettingsMenu/Control/HBoxContainer/BtnCloseSettings" to="." method="_on_BtnCloseSettings_pressed"]
[connection signal="timeout" from="Camera/TimerShake" to="Camera" method="_on_TimerShake_timeout"]
